Add search filters to dropdown-heavy areas

--- a/dashboard.html
+++ b/dashboard.html
@@ -128,6 +128,15 @@
       isolation: isolate;
       box-shadow: inset 0 1px 0 rgba(255,255,255,0.02);
     }
+    .nav-icon {
+      width: 16px;
+      height: 16px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      color: inherit;
+      opacity: 0.9;
+    }
     nav button::before {
       content: "";
       width: 10px;
@@ -442,6 +451,17 @@
       display: none;
       box-shadow: var(--shadow-soft);
     }
+    .select-search {
+      min-width: 160px;
+      padding: 10px 12px;
+      border-radius: 10px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,0.025);
+      color: white;
+      font-size: 13px;
+      font-family: inherit;
+    }
+    .select-search::placeholder { color: var(--muted); }
     .tab { display: none; animation: fadeIn 0.2s ease; padding: 4px 0 12px; }
     .tab.active { display: block; }
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
@@ -640,17 +660,72 @@
       <span>SPMS Dashboard</span>
     </div>
     <nav>
-      <button class="active" data-tab="overview">Overview</button>
-      <button data-tab="students">Students</button>
-      <button data-tab="sections">Sections</button>
-      <button data-tab="logs">Grades</button>
-      <button data-tab="grade-sheet">Grade Sheet</button>
-      <button data-tab="attendance">Attendance</button>
-      <button data-tab="trends">Trends</button>
-      <button data-tab="comms">Communications <span id="comms-badge" class="badge" style="display:none;">0</span></button>
-      <button data-tab="subjects">Subjects</button>
-      <button data-tab="admin">Administration <span id="admin-pending-badge" class="badge" style="display:none;">0</span></button>
-      <button onclick="logout()">Logout</button>
+      <button class="active" data-tab="overview">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 13h5v7H4z"/><path d="M15 4h5v16h-5z"/><path d="M9 9h5v11H9z"/></svg>
+        </span>
+        Overview
+      </button>
+      <button data-tab="students">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="7" r="4"/><path d="M5.5 21a6.5 6.5 0 0 1 13 0"/></svg>
+        </span>
+        Students
+      </button>
+      <button data-tab="sections">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="6" rx="1"/><rect x="3" y="14" width="10" height="6" rx="1"/><path d="M17 14h4v6h-4z"/></svg>
+        </span>
+        Sections
+      </button>
+      <button data-tab="logs">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 19h16"/><path d="M9 15h1"/><path d="M9 11h1"/><path d="M9 7h1"/><path d="M14 15h1"/><path d="M14 11h1"/><path d="M14 7h1"/><rect x="5" y="4" width="14" height="16" rx="2"/></svg>
+        </span>
+        Grades
+      </button>
+      <button data-tab="grade-sheet">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 4h9l5 5v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2z"/><path d="M14 4v5h5"/><path d="M8 13h8"/><path d="M8 17h5"/></svg>
+        </span>
+        Grade Sheet
+      </button>
+      <button data-tab="attendance">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="9"/><path d="M12 7v5l3 3"/></svg>
+        </span>
+        Attendance
+      </button>
+      <button data-tab="trends">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 17l6-6 4 4 7-7"/><path d="M14 7h7v7"/></svg>
+        </span>
+        Trends
+      </button>
+      <button data-tab="comms">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 7.5 7.5z"/></svg>
+        </span>
+        Communications <span id="comms-badge" class="badge" style="display:none;">0</span>
+      </button>
+      <button data-tab="subjects">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 19.5v-15a1 1 0 0 1 1.5-.86l13 7.5a1 1 0 0 1 0 1.72l-13 7.5A1 1 0 0 1 4 19.5z"/></svg>
+        </span>
+        Subjects
+      </button>
+      <button data-tab="admin">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09a1.65 1.65 0 0 0-1-1.51 1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09a1.65 1.65 0 0 0 1.51-1 1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06a1.65 1.65 0 0 0 1.82.33h.09A1.65 1.65 0 0 0 10.91 3V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51h.09a1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82v.09a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"/></svg>
+        </span>
+        Administration <span id="admin-pending-badge" class="badge" style="display:none;">0</span>
+      </button>
+      <button onclick="logout()">
+        <span class="nav-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
+        </span>
+        Logout
+      </button>
     </nav>
   </aside>
   <main>
@@ -743,7 +818,9 @@
           <summary>Assign Students to Section</summary>
           <div class="accordion-body">
             <div style="display:flex; flex-wrap:wrap; gap:12px; margin-bottom:12px;">
+              <input class="select-search" id="assign-section-search" placeholder="Search section..." oninput="filterSelect('assign-section', this.value)">
               <select id="assign-section" style="min-width:200px;"></select>
+              <input class="select-search" id="assign-student-search" placeholder="Search student..." oninput="filterSelect('assign-student', this.value)">
               <select id="assign-student" style="min-width:200px;"></select>
               <button id="assign-btn" type="button">Assign</button>
             </div>
@@ -779,6 +856,7 @@
           <summary>Section Schedule</summary>
           <div class="accordion-body">
             <div style="display:flex; flex-wrap:wrap; gap:12px; margin-bottom:12px;">
+              <input class="select-search" id="schedule-section-search" placeholder="Search section..." oninput="filterSelect('schedule-section', this.value)">
               <select id="schedule-section" style="min-width:200px;"></select>
               <label style="display:flex; align-items:center; gap:6px; font-size:12px; color: var(--muted);">
                 <input id="schedule-allow-sat" type="checkbox" /> Allow Saturday (make-up)
@@ -817,10 +895,13 @@
           <h3>Final Grades</h3>
           <div id="grade-error" class="error"></div>
           <div style="display:flex; flex-wrap:wrap; gap:12px; margin-bottom:12px;">
+            <input class="select-search" id="grade-section-search" placeholder="Search section..." oninput="filterSelect('grade-section', this.value)">
             <select id="grade-section" style="min-width:160px;">
               <option value="">All sections</option>
             </select>
+            <input class="select-search" id="grade-student-search" placeholder="Search student..." oninput="filterSelect('grade-student', this.value)">
             <select id="grade-student" style="min-width:180px;"></select>
+            <input class="select-search" id="grade-subject-search" placeholder="Search subject..." oninput="filterSelect('grade-subject', this.value)">
             <select id="grade-subject" style="min-width:200px;">
               <option value="">All subjects</option>
             </select>
@@ -902,6 +983,7 @@
     <section class="tab" id="tab-trends">
       <div class="card">
           <div class="flex" style="margin-bottom: 20px;">
+            <input class="select-search" id="trend-student-search" placeholder="Search student..." oninput="filterSelect('trend-student', this.value)" style="max-width: 240px;">
             <select id="trend-student" style="max-width: 300px;"></select>
             <button id="trend-refresh" class="btn-secondary">Refresh Trends</button>
           </div>
@@ -920,9 +1002,11 @@
             <option value="JHS">JHS</option>
             <option value="SHS">SHS</option>
           </select>
+          <input class="select-search" id="sheet-subject-search" placeholder="Search subject..." oninput="filterSelect('sheet-subject', this.value)">
           <select id="sheet-subject">
             <option value="">Select subject</option>
           </select>
+          <input class="select-search" id="sheet-section-search" placeholder="Search section..." oninput="filterSelect('sheet-section', this.value)">
           <select id="sheet-section">
             <option value="">All sections</option>
           </select>
@@ -1217,6 +1301,18 @@
       if (tab === "comms") {
         loadComms(true);
       }
+    }
+
+    function filterSelect(selectId, query) {
+      const sel = document.getElementById(selectId);
+      if (!sel) return;
+      const q = (query || "").trim().toLowerCase();
+      Array.from(sel.options).forEach(opt => {
+        if (opt.value === "") { opt.hidden = false; return; }
+        if (!q) { opt.hidden = false; return; }
+        const label = (opt.textContent || "").toLowerCase();
+        opt.hidden = !label.includes(q);
+      });
     }
 
     async function fetchJSON(path, options = {}) {
